# LLM_SCADA

./: .gitignore  LICENSE  README.md
karabo/karathon-mdl/coordinated_motion/: PROMPT.md  pyproject.toml
karabo/karathon-mdl/coordinated_motion/src/random_scan_device/: __init__.py  random_scan_device.py
karabo/karathon-mdl/coordinated_motion/src/random_scan_device/test/: test_random_scan_device.py
karabo/karathon-mdl/image_processing/: PROMPT.md  pyproject.toml
karabo/karathon-mdl/image_processing/src/center_of_mass_device/: __init__.py  center_of_mass_device.py
karabo/karathon-mdl/image_processing/src/center_of_mass_device/test/: test_center_of_mass_device.py
karabo/karathon-mdl/monitoring/: PROMPT.md  pyproject.toml
karabo/karathon-mdl/monitoring/src/system_monitor/: __init__.py  system_monitor.py
karabo/karathon-mdl/monitoring/src/system_monitor/test/: test_system_monitor.py
